Fri Oct 18 16:49:04 2002  Jaiganesh Balasubramanian  <jai@doc.ece.uci.edu>

	*
	orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/
	run_test.pl:
	Added the file to the new directory created for the test.

Fri Oct 18 16:11:23 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Log/Log_i.cpp (Log_i): Patch to prevent compile
	  errors on OpenBSD. Thanks to Frank Hunleth <frank@hunleth.com>
	  for the patch. The problem is because of a type conversion from  
	  unsigned long to time_t. Looks like time_t is an int on
	  OpenBSD. 
	  
	* orbsvcs/orbsvcs/Log/Log_i.h: Some cosmetic fixes.

Fri Oct 18 16:09:37 2002  Priyanka Gontla  <pgontla@ociweb.com>

	* orbsvcs/ImplRepo_Service/README.txt: 
	* orbsvcs/ImplRepo_Service/README: 
	  Removed README and added README.txt instead as doxygen
	  is looking for only txt files besides the normal implementation,
	  header and inline files.

	  Thanks to Bala for pointing the reason why the index.html is not
	  getting generated via doxygen.
	
Fri Oct 18 15:52:11 2002  Priyanka Gontla  <pgontla@ociweb.com>

	* orbsvcs/tests/ImplRepo/Makefile: 
	* orbsvcs/tests/ImplRepo/NameService/Makefile: 
	* orbsvcs/ImplRepo_Service/Makefile: 
	* orbsvcs/orbsvcs/Makefile:
	  Applied the patches provided by Craig Rodrigues so that
	  Implementation Repostory and related tests will be compiled 
	  only when ImplRepo is added to the list of TAO_ORBSVCS
	  in platform_macros.

	  Thanks to Craig Rodrigues for pointing this out and for
	  the patches.

Fri Oct 18 15:59:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/AMH/Sink_Server/mt_server.cpp: 
	* examples/AMH/Sink_Server/st_server.cpp: Removed strange inl file
	  inclusions in the above files.

Fri Oct 18 15:56:04 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/AMH/Sink_Server/Base_Server.h: Included the inline
	  file in the header file. 
